Moving the mouse Immediately after locking prevents screen standby
If you move the mouse immediately after locking the screen then although the screen locks the monitor never enters standby. Also the LockedHint
property is never sent.
Steps to reproduce:
-
Run dbus monitor:
dbus-monitor --system type='signal' interface='org.freedesktop.login1'
-
Attempt to lock the screen by clicking on the lock icon in the top-right menu - but keep the mouse moving continuously while doing so.
-
Lockscreen will appear but the screen will not go blank.
-
The following event will NOT be sent to dbus:
signal time=1528670902.317992 sender=:1.1 -> destination=(null destination) serial=3381 path=/org/freedesktop/login1/session/_32; interface=org.freedesktop.DBus.Properties; member=PropertiesChanged
string "org.freedesktop.login1.Session"
array [
dict entry(
string "LockedHint"
variant boolean true
)
]
array [
]
If you perform the same test but keeping the mouse still, the screen will blank and a dbus event will be sent that sets LockedHint
to true
for your session.